--- a/Projeto_Integrado-main/Projeto_Integrado-main/index.css
+++ b/Projeto_Integrado-main/Projeto_Integrado-main/index.css
@@ -183,4 +183,22 @@ header h1 {
   margin-right: 25px;
 }
 
-
+.tab-container {
+    background-color: #D9D9D9;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 2px solid black;
+  }
+  
+  .tab {
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 0px; /* Adicionado margem lateral */
+    border: 2px solid black;
+  }
+  
+  .tab:hover {
+    background-color: #D9D9D9;
+  }
+  
